# health-coverage-navigator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml
data/: README.md
data/processed/healthcare_gov/: corpus.jsonl
data/raw/healthcare_gov/: _meta.json
data/raw/healthcare_gov/collections/: articles.json  glossary.json  states.json
data/raw/healthcare_gov/posts/: 2016-exemptions.json  2017-exemptions.json  accessibility.json  address-questions.json  agent-broker-quick-start.json  agent-privacy-act-statement.json  agents-and-brokers-register.json  alabama.json  alaska.json  alert.json  american-indians-alaska-natives_coverage-resources.json  american-indians-alaska-natives_coverage.json  american-indians-alaska-natives_medicaid-chip.json  american-samoa.json  appeal-insurance-company-decision_appeals.json  appeal-insurance-company-decision_external-review.json  appeal-insurance-company-decision_internal-appeals.json  appeal-request-submitted.json  applied-by-phone-or-mail.json  apply-and-enroll_change-after-enrolling.json  apply-and-enroll_complete-your-enrollment.json  apply-and-enroll_get-help-applying.json  apply-and-enroll_get-ready-to-apply.json  apply-and-enroll_health-insurance-grace-period.json  apply-and-enroll_health-insurance-plans-estimator-overview.json  apply-and-enroll_how-to-apply.json  apply-and-enroll_income-too-high-for-tax-credit.json  archive.json  (+743 more)
docs/: HEALTH-COVERAGE-ROADMAP.md  health_care_data.md  plan.md  to-do.md
scripts/: README.md  download_healthcare_gov.py
src/health_coverage_navigator/: __init__.py
